libraries/modyo-design-system/src/components/m-form-switch/m-form-switch.scss
:host,
.form-switch-box {
  --#{$prefix}form-check-border-width-focus: #{$form-check-border-width-focus};
  --#{$prefix}form-check-border-color-focus: #{$form-check-border-color-focus};
  --#{$prefix}checkbox-box-border-width: 3px;
  --#{$prefix}checkbox-box-border-radius: #{$form-check-input-border-radius};
  display: block;

  width: 100%;
  padding: var(--#{$prefix}checkbox-box-border-width);

  &:focus-within,
  &.focus {
    border-radius: var(--#{$prefix}checkbox-box-border-radius);
    box-shadow: 0 0 0 var(--#{$prefix}form-check-border-width-focus) var(--#{$prefix}form-check-border-color-focus);
  }

  .form-check,
  .form-switch {
    width: 100%;
  }

  .form-check-switch:hover:not([disabled]) {
    --#{$prefix}form-switch-border-hover-color: var(--#{$prefix}tertiary);
    border: var(--#{$prefix}form-check-input-border-hover-width) solid var(--#{$prefix}form-switch-border-hover-color);
  }

  .form-switch-box-label {
    display: flex;
    gap: 1rem;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
  }
}

